--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -25,7 +26,84 @@
                 <button class="button">заказать звонок</button>
             </div>
             </header>
+            <div class="promo__wrapper">
+            <h1 class="promo__header">Подбор пульсометра</h1>
+            <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+            <div class="promo__icons">
+                <div class="promo__icon">
+                    <img src="icons/min.png" alt="time">Время подбора: 10 минут
+                </div>
+                <div class="promo__icon">
+                    <img src="icons/delivery.png" alt="">Бесплатная доставка
+                </div>
+                <div class="promo__icon">
+                    <img src="icons/questions.png" alt="">Ответим на все вопросы
+                </div>
+            </div>
+            <button class="button button__main">заказать консультацию</button>
+            <div class="promo__link">
+                или
+                <a href="#">перейти в каталог</a>
+            </div>
+            </div>
         </div>
-    </div>
+    </section>
+    <section class="benefits">
+        <div class="container">
+            <div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
+                <div class="benefits__wrapper">
+                        <div class="benefits__items">
+                                <img src="icons/cup.png" alt="cup">
+                                <div class="benefits__subheader">Делимся опытом</div>
+                                <div class="benefits__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                        </div>
+                        <div class="benefits__items">
+                            <img src="icons/heart.png" alt="cup">
+                            <div class="benefits__subheader">Заботимся о здоровье</div>
+                            <div class="benefits__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                        </div>
+                        <div class="benefits__items">
+                            <img src="icons/leg.png" alt="cup">
+                            <div class="benefits__subheader">Учим бегать</div>
+                            <div class="benefits__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+                        </div>
+                </div>                     
+        </div>
+    </section>
+    <section class="concultation">
+        <div class="container">
+            <h2 class="title title__left">
+                Получите бесплатную консультацию <br>по подбору пульсометра
+            </h2>
+            <div class="concultation__descr">
+                Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+                <button class="button button__submit">Заказать консультацию</button>
+            </form>
+        </div>
+    </section>
+    <section class="carousel">        
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slide_1.jpg" alt="slide">
+                </div>
+                <div>
+                    <img src="img/slide_2.jpg" alt="slide">
+                </div>
+                <div>
+                    <img src="img/slide_3.jpg" alt="slide">
+                </div>
+              </div>          
+        </div>
+    </section>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
